# ClearInk

./: .gitignore  README.md  README_zh.md  findings.json  pyproject.toml  spec.md  tmp_simplify5_diff.txt
data/.scheduled_tasks/: .gitkeep
data/environment/: .env.sample
data/mcp/: servers.json
data/skills/google_scholar/: SKILL.md
data/system_prompts/: guidelines.md  mode1.md  mode2.md
data/system_prompts/.memory/: formula-kaiming-eq6-dependencies.md  kaiming-eq6-derivation-details.md  kaiming-eq6-prerequisite-reading-list.md  memory.md
skills/google_scholar/: SKILL.md
src/clearink/: __init__.py  config.py  main.py  system_build.py
src/clearink/api/: __init__.py  endpoints.py  session.py  web_format.py
src/clearink/context_compact/: __init__.py  archive.py  compact.py  config.py  layers.py  summary.py  token_estimate.py
src/clearink/error_recovery/: overflow.py  retry.py  truncation.py  wrapper.py
src/clearink/hook/: __init__.py  audit.py  hook.py  reading.py
src/clearink/message/: __init__.py  blocks.py
src/clearink/system_prompt/: memory_load.py  memory_store.py  memory_tool.py  system_build.py
src/clearink/tool/: _llm_loop.py  background.py  basetool.py  register.py  scheduler.py  skill.py  subagent.py  task_system.py  teammate.py  todo.py
src/clearink/tool/background/: __init__.py  core.py  tools.py
src/clearink/tool/basetool/: __init__.py  tools.py
src/clearink/tool/mcp_client/: __init__.py  client.py  core.py  utils.py
src/clearink/tool/regulation/: __init__.py  tools.py
src/clearink/tool/scheduler/: __init__.py  core.py  model.py  tools.py
src/clearink/tool/skill/: __init__.py  core.py
src/clearink/tool/subagent/: __init__.py  core.py
src/clearink/tool/task_system/: __init__.py  manager.py  tools.py
src/clearink/tool/team/: __init__.py  bus.py  lifecycle.py  (+2 more)
src/clearink/user/: __init__.py  console.py  i18n.py  interface.py  mode.py  output_format.py
system_prompts/: base.md
tests/: conftest.py  helpers.py  test_api_workflow.py  test_audit_hook.py  test_background_helpers.py  test_config_paths.py  test_context_layers.py  test_context_summary.py  test_cron_matching.py  test_cron_model.py  test_deepseek_params.py  test_endpoints_helpers.py  test_error_overflow.py  test_error_retry.py  test_error_truncation.py  test_hook.py  test_idle_poller.py  test_mcp_core.py  test_mcp_utils.py  test_memory_load_parse.py  test_memory_store.py  test_message_blocks.py  test_mode.py  test_output_format.py  test_parallel_dispatch.py  test_protocol_core.py  test_protocol_handlers.py  test_protocol_state.py  test_reading_hook.py  test_regulation.py  test_scheduler_runtime.py  test_session.py  test_skill.py  test_system_build.py  test_task_manager.py  test_task_scanner.py  test_thinking_replay.py  test_todo.py  test_token_estimate.py  test_web_format.py  (+3 more)
tests/integration/: conftest.py  test_agent_loop.py  test_context_compaction.py  test_error_recovery.py  test_hook_integration.py  test_memory_pipeline.py  test_tool_pipeline.py
tmp/: code_review_findings.json
(+12 files in other folders)
