[project]
name = "clearink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mr-remon219", email = "2609741281@qq.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.104.1",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
clearink = "clearink.main:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
