[project]
name = "clearink"
version = "1.0.0a0"
description = "An academic literature pathfinding agent — given a formula or paper, maps prerequisite dependencies with verifiable, section-annotated citations. Installable CLI with decorator-based tool registry, SKILL.md extension system, sub-agent delegation, and layered context compaction."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mr-remon219", email = "2609741281@qq.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "anthropic>=0.104.1",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/Mr-remon219/clearink"
Repository = "https://github.com/Mr-remon219/clearink"

[project.scripts]
clearink = "clearink.main:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.uv.build-backend]
source-exclude = [
    "**/.claude/**",
    "**/.venv/**",
    "**/__pycache__/**",
]
